src/test/deca/context/valid/sansObj/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Résultat:
//    Succès
//

{
        println("Hello, world!");
}
