src/test/deca/context/invalid/sansObj/print-no-guill-left.deca
// Description:
//    Println sans le guillemet gauche
//
// Résultat:
//token recognition error

{
        println(Hello, world!");
}